# COLLATZ-NATIVE-MATH

./: .gitignore  BOUNDARIES.md  CHANGELOG.md  CITATION.cff  CORE_IDEA.md  CRC_CONJECTURE.md  LICENSE  MATH_COLLATZ.md  README.md  START_HERE.md  pyproject.toml
collatz_native_auditor/: cli.py  core.py
data/: sample_traces.jsonl
docs/: ADVERSARIAL_COMPENSATION_SCAN.md  AUDIT_BOUNDARY.md  AUDIT_CERTIFICATE_REQUIREMENTS.md  AUDIT_CHECKS.md  AUDIT_ENTRY_FILE_REQUIREMENTS.md  AUDIT_REPORT_READER_GUIDE.md  BAD_WINDOW_LEMMA_CANDIDATES.md  BAND_STABILIZATION_AUDIT_V0.md  BENIGN_VS_DANGEROUS_REGENERATION.md  BOUNDED_OBSTRUCTION_NEXT_STEPS.md  BOUNDED_OBSTRUCTION_SEARCH_LIMITS.md  BOUNDED_OBSTRUCTION_SEARCH_SCANNER.md  BOUNDED_OBSTRUCTION_SIGNATURE.md  BOUNDED_SEARCH_NEGATIVE_RESULT.md  BOUNDED_SEARCH_RESULT_TYPES.md  CHAIN_ANALYSIS.md  CHAIN_COLLAPSE.md  CHAIN_RESULTS.md  CHEAPNESS_RATIO.md  CHEAP_REGENERATION.md  CLASSIFICATION_RESULTS.md  CLOSURE_RESULT_TYPES.md  COLLAPSE_CAUSE_CLASSIFICATION.md  COLLAPSE_MECHANISMS.md  COLLAPSE_RESULTS.md  COLLATZ_AS_NATIVE_LANGUAGE.md  COMPENSATION_FORMALIZATION.md  COMPENSATION_LAW_CANDIDATE.md  COMPENSATION_LAW_SEARCH.md  COMPENSATION_LEMMA_CANDIDATES.md  COMPENSATION_RESULTS.md  COMPENSATION_WINDOW_PROTOCOL.md  COMPRESSION_DEBT_MACHINE_V0.md  CONSERVATION_AROUND_9780657630.md  CONSERVATION_AS_NATIVE_BEHAVIOR.md  CONSERVATION_MAP_LIMITS.md  CONSERVATION_OF_DANGER_RELEASE.md  CONSERVATION_OF_INSTABILITY.md  CONSOLIDATED_NATIVE_STATUS.md  COUNTEREXAMPLE_CANDIDATE_PROTOCOL.md  (+221 more)
examples/: adversarial_compensation_scan.py  (+52 more)
(+231 files in other folders)
