[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-native-math"
version = "0.1.0"
description = "Native Collatz trajectory auditing tools."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
collatz-native-audit = "collatz_native_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["collatz_native_auditor*"]
